<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fillViewport="true"
    android:background="#868a91">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <TextView
            android:id="@+id/greeting_txtview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bonjour"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="28sp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/institution_txtview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hyperlink"
            android:textColorLink="#0000EE"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/greeting_txtview"
            app:layout_constraintBottom_toBottomOf="@id/form_tableview"
            app:layout_constraintVertical_bias=".2"/>

        <TableLayout
            android:id="@+id/form_tableview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/institution_txtview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".2"
            android:layout_margin="10dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border">
                <TextView
                    android:text="@string/last_name"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:background="@drawable/border"/>
                <TextView
                    android:text="Ctrl-O"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border">
                <TextView
                    android:text="@string/first_name"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:background="@drawable/border"/>
                <TextView
                    android:text="Ctrl-O"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border">
                <TextView
                    android:text="@string/gender"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:background="@drawable/border"/>
                <TextView
                    android:text="Ctrl-O"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border">
                <TextView
                    android:text="@string/typeof_work"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:background="@drawable/border"/>
                <TextView
                    android:text="Ctrl-O"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border">
                <TextView
                    android:text="@string/comments"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:background="@drawable/border"/>
                <TextView
                    android:text="Ctrl-O"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Envoyer"
            app:layout_constraintTop_toBottomOf="@id/form_tableview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cancel_btn"/>

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Effacer"
            app:layout_constraintTop_toBottomOf="@id/form_tableview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".1"
            app:layout_constraintLeft_toRightOf="@id/send_btn"
            app:layout_constraintRight_toRightOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>